# vessel-callings

./: .gitignore  BRIEF.md  README.md  databricks.yml  requirements.txt  vessel_callings_deck.html
.claude/: settings.json
app/: .gitignore  README.md  app.py  app.yaml  pyproject.toml
app/frontend/: .gitignore  .npmrc  index.html  package-lock.json  package.json  tsconfig.json
app/frontend/src/: App.tsx  api.ts
app/server/: config.py  db.py
app/server/routes/: callings.py  positions.py  shapes.py
data/: UKHO_IMO_Routeing_Measures_Areas.parquet
docs/: vessel_callings_deck.html
infra/: cluster.json
notebooks/00_setup/: copy_shape_files.py  reset_streaming_state.py  truncate_callings.py
notebooks/10_shapes/: build_shape_cells.py  load_shapes.py  pick_target_res.py
notebooks/20_positions/: generate_ais.py  index_positions.py
notebooks/30_callings/: stream_callings.py  stream_callings_v2.py
notebooks/40_mutations/: replay_shape_change.py
notebooks/90_validation/: check_status.py  correctness_oracle.sql  explain_chip_buffer.py  explore_positions.py  explore_shape_cells.py  explore_vessel_callings.py  perf_microbench.sql
resources/: schemas.yml
resources/dashboards/: README.md
resources/jobs/: 00_bootstrap.job.yml  10_shape_index.job.yml  20_position_generate.job.yml  30_position_index.job.yml  40_callings_merge.job.yml  50_shape_mutation_replay.job.yml
src/generator/: __init__.py  fleet.py  fleet.yaml  perturb.py  ports.yaml  routing.py  stepper.py  world.py
tests/: test_generator_smoke.py
