[project]
name = "clarksons-vessel-callings"
version = "0.1.0"
description = "Databricks App: live vessel-callings visualisation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "databricks-sql-connector>=3.5",
    "databricks-sdk>=0.40",
    "pydantic>=2.0",
]

[tool.uv]
package = false
