[project]
name = "marineintel-vessel-callings"
version = "0.1.0"
description = "Databricks App: live vessel-callings visualisation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "databricks-sql-connector>=3.5",
    "databricks-sdk>=0.40",
    "pydantic>=2.0",
    # Required so the unwheeled `thrift==0.22.0` source build (transitive
    # dep of databricks-sql-connector) can find setuptools without going
    # back to the index — paired with no-build-isolation-package below.
    "setuptools>=70.0",
    "wheel>=0.42",
]

[tool.uv]
package = false
# `thrift` ships sdist only; uv's default build isolation can't resolve
# setuptools through the Databricks Apps build runtime's index. Disabling
# isolation for this package lets the build use our project-level
# setuptools/wheel pins above.
no-build-isolation-package = ["thrift"]
# The cloud pypi proxy blocks package versions released within the last
# 7 days (supply-chain hardening), 404-ing their wheels in the Apps build
# runtime. Pin resolution to versions released before a cutoff well past
# that window so every locked version is old enough for the proxy to
# serve. Bump this date forward when you deliberately want newer deps.
exclude-newer = "2026-06-15T00:00:00Z"

# Use the supply-chain-safe production pypi proxy (mirrors the npm one).
# The legacy `pypi-proxy.dev.databricks.com` proxy is flaky from inside
# the Databricks Apps build runtime and gets timeouts on package
# downloads; the cloud proxy is the documented dev-laptop and runtime
# default.
[[tool.uv.index]]
name = "databricks-cloud"
url = "https://pypi-proxy.cloud.databricks.com/simple/"
default = true
